--- a/css/app.css
+++ b/css/app.css
@@ -129,3 +129,24 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.grid-test {
+  height: 100vh; }
+
+.row {
+  max-width: 100rem;
+  margin: 0 auto;
+  background-color: #c48d45;
+  margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: block;
+    clear: both; }
+
+.col-1-of-2 {
+  width: 40%;
+  float: left;
+  background-color: aquamarine;
+  margin-right: 20%; }
+  .col-1-of-2:last-child {
+    margin-right: 0; }
