--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,13 @@
+// colors 
+
 $Dark-green: #28b485;
 $Medium-green: #55c57a;
 $Light-green: #7ed56f;
 
 $grey-light: #777;
+
+// grid 
+
+$grid-width : 114rem ; 
+$gutter-vertical : 8rem ;
+$grid-margin-bottom : 6rem ;
