--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,8 +6,13 @@ $Light-green: #7ed56f;
 
 $grey-light: #777;
 
+$color-black : #0000 ;
+$color-white : #ffff ;
+
 // grid 
 
 $grid-width : 114rem ; 
-$gutter-vertical : 8rem ;
 $grid-margin-bottom : 6rem ;
+
+$gutter-horizental : 4rem ;  
+$gutter-vertical : 8rem ;
