--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .heading-primary {
-    color: white;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
