build the about section

--- a/css/app.css
+++ b/css/app.css
@@ -23,6 +23,32 @@ body {
     letter-spacing: 1.7rem;
     animation: moveInRight 1s ease-in; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: all 0.2s;
+  background-image: linear-gradient(to right, #7ed56f, #7ed56f);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent; }
+  .heading-secondary:hover {
+    transform: skewY(2deg);
+    text-shadow: 2px 10px 1rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 700; }
+
+.paragraph {
+  font-size: 1.6rem;
+  text-align: justify; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 2rem; }
+
 *,
 *::before,
 *::after {
@@ -65,6 +91,21 @@ body {
   100% {
     opacity: 1;
     transform: translateY(0); } }
+
+.center-div {
+  text-align: center; }
+
+.display-relative {
+  position: relative; }
+
+.margin-bottom-s {
+  margin-bottom: 1rem; }
+
+.margin-bottom-m {
+  margin-bottom: 4rem; }
+
+.margin-bottom-h {
+  margin-bottom: 6rem; }
 
 .btn:link, .btn:visited {
   font-size: 1.6rem;
@@ -110,12 +151,57 @@ body {
   border-radius: 5rem;
   transition: all 0.4s; }
 
+.btn-text:link, .btn-text:visited {
+  display: inline-block;
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: #28b485;
+  padding: 3px;
+  border-bottom: 1px solid #28b485;
+  transition: all 0.2s; }
+
+.btn-text:hover {
+  background-color: #28b485;
+  color: #f7f7f7;
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25); }
+
+.btn-text:active {
+  transform: translateY(3px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all 0.3s;
+    outline-offset: 2rem; }
+    .composition__photo:nth-child(1) {
+      position: absolute;
+      left: 0;
+      top: -2rem; }
+    .composition__photo:nth-child(2) {
+      position: absolute;
+      top: 0;
+      right: 2rem; }
+    .composition__photo:nth-child(3) {
+      position: absolute;
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      transform: scale(1.1);
+      outline: 1rem solid #7ed56f;
+      z-index: 1; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.6)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0%, 100% 75%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
   position: relative; }
   .header__logo-box {
     position: absolute;
@@ -135,26 +221,27 @@ body {
 * used clear fix mixin 
 * used the calc() function and substructed the margin right to have a equally justified columns 
 */
-.grid {
-  height: 100vh; }
-  .grid .row {
-    max-width: 114rem;
-    margin: 0 auto;
-    background-color: #c48d45; }
-    .grid .row:not(:last-child) {
-      margin-bottom: 8rem; }
-    .grid .row::after {
-      content: "";
-      display: table;
-      clear: both; }
-    .grid .row [class^="col-"] {
-      float: left;
-      background-color: aquamarine; }
-      .grid .row [class^="col-"]:not(:last-child) {
-        margin-right: 4rem; }
-    .grid .row .col-1-of-2 {
-      width: calc((100% - 4rem) / 2); }
-    .grid .row .col-1-of-3 {
-      width: calc((100% - 4rem * 2) / 3); }
-    .grid .row .col-1-of-3 {
-      width: calc((100% - 4rem * 2) / 3); }
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 4rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 4rem * 2) / 3); }
+  .row .col-1-of-3 {
+    width: calc((100% - 4rem * 3) / 4); }
+
+.section-about {
+  background-color: #f7f7f7;
+  margin-top: -20vh;
+  padding: 25vh; }
