--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $Medium-green: #55c57a;
 $Light-green: #7ed56f;
 
 $grey-light: #777;
+$light-dark : #f7f7f7; 
 
 $color-black : #0000 ;
 $color-white : #ffff ;
