build features section

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -12,6 +12,7 @@
 // components 
 @import "components/buttons" ;
 @import "components/composition" ;
+@import "components/feature-box" ;
 
 
 // layouts
