--- a/css/app.css
+++ b/css/app.css
@@ -28,10 +28,9 @@ body {
   font-weight: 700;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
-  display: inline-block;
   transition: all 0.2s;
+  display: inline-block;
   background-image: linear-gradient(to right, #7ed56f, #7ed56f);
-  background-clip: text;
   -webkit-background-clip: text;
   color: transparent; }
   .heading-secondary:hover {
@@ -196,6 +195,26 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2.5rem;
+  font-size: 1.4rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  transition: all 0.3s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 5px;
+    display: inline-block;
+    background-image: linear-gradient(to right, #7ed56f, #7ed56f);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.6)), url(../img/hero.jpg);
@@ -238,10 +257,19 @@ body {
     width: calc((100% - 4rem) / 2); }
   .row .col-1-of-3 {
     width: calc((100% - 4rem * 2) / 3); }
-  .row .col-1-of-3 {
+  .row .col-1-of-4 {
     width: calc((100% - 4rem * 3) / 4); }
 
 .section-about {
   background-color: #f7f7f7;
   margin-top: -20vh;
   padding: 25vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.6)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
