build the front face of the card tours

--- a/css/app.css
+++ b/css/app.css
@@ -169,6 +169,79 @@ body {
   transform: translateY(3px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25); }
 
+.card {
+  position: relative;
+  perspective: 150rem;
+  height: 50rem; }
+  .card__side {
+    width: 100%;
+    height: 50rem;
+    font-size: 1.6rem;
+    color: #ffff;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    box-shadow: 2px 1rem 4rem rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back--1 {
+        background-image: linear-gradient(120deg, #ffb900, #ff7730); }
+      .card__side--back--2 {
+        background-image: linear-gradient(120deg, #7ed56f, #28b485); }
+      .card__side--back--3 {
+        background-image: linear-gradient(120deg, #2998ff, #5643fa); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
+  .card__image {
+    height: 40%;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0%, 100% 80%, 0% 100%);
+    background-blend-mode: multiply; }
+    .card__image--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
+    .card__image--2 {
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-6.jpg); }
+    .card__image--3 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
+  .card__header {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #ffff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem; }
+  .card__header-span {
+    padding: 1rem 1.5rem;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone; }
+    .card__header-span--1 {
+      background-image: linear-gradient(to right, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)), linear-gradient(to right, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)); }
+    .card__header-span--2 {
+      background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)); }
+    .card__header-span--3 {
+      background-image: linear-gradient(to right, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)), linear-gradient(to right, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        padding: 1rem;
+        text-align: center;
+        color: #777;
+        font-size: 1.6rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #777; }
+
 .composition {
   position: relative; }
   .composition__photo {
@@ -262,14 +335,19 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  margin-top: -20vh;
-  padding: 25vh; }
+  padding: 20rem;
+  margin-top: -20vh; }
 
 .section-features {
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.6)), url(../img/nat-4.jpg);
   background-size: cover;
-  transform: skewY(-7deg);
+  transform: skewY(-6deg);
   margin-top: -10rem; }
   .section-features > * {
-    transform: skewY(7deg); }
+    transform: skewY(6deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25vh;
+  margin-top: -10vh; }
