--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,11 +4,19 @@ $Dark-green: #28b485;
 $Medium-green: #55c57a;
 $Light-green: #7ed56f;
 
+$Light-orange: #ffb900;
+$Dark-orange: #ff7730;
+
+$Light-blue: #2998ff;
+$Dark-blue: #5643fa;
+
 $grey-light: #777;
 $light-dark : #f7f7f7; 
 
 $color-black : #0000 ;
 $color-white : #ffff ;
+
+$default-font-size : 1.6rem ;
 
 // grid 
 
