--- a/sass/app.scss
+++ b/sass/app.scss
@@ -11,6 +11,7 @@
 
 // components 
 @import "components/buttons" ;
+@import "components/card" ;
 @import "components/composition" ;
 @import "components/feature-box" ;
 
