--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .section-about {
   background-color: $light-dark;
+  padding: 20rem;
   margin-top: -20vh;
-  padding: 25vh;
 }
 
 .section-features {
@@ -14,11 +14,17 @@
     url(../img/nat-4.jpg);
   background-size: cover;
 
-  transform: skewY(-7deg);
+  transform: skewY(-6deg);
 
   margin-top: -10rem;
 
   & > * {
-    transform: skewY(7deg);
+    transform: skewY(6deg);
   }
+}
+
+.section-tours {
+  background-color: $light-dark;
+  padding: 25vh;
+  margin-top: -10vh;
 }
