build the back face of the card tours

--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,15 @@ body {
 .margin-bottom-h {
   margin-bottom: 8rem; }
 
+.margin-top-s {
+  margin-top: 2rem; }
+
+.margin-top-m {
+  margin-top: 4rem; }
+
+.margin-top-h {
+  margin-top: 8rem; }
+
 .btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -119,9 +128,15 @@ body {
 
 .btn--white {
   color: #777;
-  background-color: white; }
+  background-color: #ffff; }
   .btn--white::after {
-    background-color: white; }
+    background-color: #ffff; }
+
+.btn--green {
+  color: #ffff;
+  background-color: #28b485; }
+  .btn--green::after {
+    background-color: #28b485; }
 
 .btn--animated {
   animation: moveUp 0.5s ease-out 1s;
@@ -174,7 +189,7 @@ body {
   perspective: 150rem;
   height: 50rem; }
   .card__side {
-    width: 100%;
+    width: 90%;
     height: 50rem;
     font-size: 1.6rem;
     color: #ffff;
@@ -241,6 +256,23 @@ body {
         font-size: 1.6rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #777; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #ffff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .composition {
   position: relative; }
@@ -349,5 +381,5 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25vh;
-  margin-top: -10vh; }
+  padding: 25rem 0 10rem 0;
+  margin-top: -10rem; }
