--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,4 +1,7 @@
 .card {
+
+    // functionality 
+
     position: relative;
 
     // setting the perspective so we get a nice rotation 
@@ -8,7 +11,7 @@
     height: 50rem;
 
     &__side {
-        width: 100%;
+        width: 90%;
         height: 50rem;
         font-size: $default-font-size ;
         color: $color-white;
@@ -47,6 +50,8 @@
         transform: rotateY(0deg) ;
     } 
 
+    // front side 
+
     &__image{
         height : 40% ;
         background-size: cover;
@@ -74,9 +79,7 @@
 
         position : absolute ; 
         top : 12rem ;
-        right : 2rem ;
-
-         
+        right : 2rem ;  
     }
 
     &__header-span {
@@ -117,6 +120,32 @@
                 }
             }
         }
+    }
+
+    // back side 
+
+    &__cta {
+        position : absolute ;
+        top : 50% ;
+        left : 50% ;
+        transform: translate(-50% , -50%);
+        width : 100% ;
+        text-align : center ;
+    }
+    
+    &__price-box {
+        text-align : center ;
+        color : $color-white ; 
+        margin-bottom: 8rem;
+
+    }
+    &__price-only {
+        font-size : 1.4rem ;
+        text-transform : uppercase ;
+    }
+    &__price-value {
+        font-size : 6rem ;
+        font-weight : 100 ; 
     }
     
 }
