--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -15,3 +15,13 @@
 .margin-bottom-h {
     margin-bottom: 8rem;
 }
+
+.margin-top-s {
+    margin-top: 2rem;
+}
+.margin-top-m {
+    margin-top: 4rem;
+}
+.margin-top-h {
+    margin-top: 8rem;
+}
