--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,6 +25,6 @@
 
 .section-tours {
   background-color: $light-dark;
-  padding: 25vh;
-  margin-top: -10vh;
+  padding: 25rem 0 10rem 0 ;
+  margin-top: -10rem;
 }
