--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $Light-blue: #2998ff;
 $Dark-blue: #5643fa;
 
 $grey-light: #777;
+$grey-light-2 : 999 ;
 $light-dark : #f7f7f7; 
 
 $color-black : #0000 ;
