--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,25 +3,25 @@
 }
 
 .display-relative {
-    position : relative; 
+    position : relative !important ; 
 }
 
 .margin-bottom-s {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important ;
 }
 .margin-bottom-m {
-    margin-bottom: 4rem;
+    margin-bottom: 4rem !important ;
 }
 .margin-bottom-h {
-    margin-bottom: 8rem;
+    margin-bottom: 8rem !important ;
 }
 
 .margin-top-s {
-    margin-top: 2rem;
+    margin-top: 2rem !important ;
 }
 .margin-top-m {
-    margin-top: 4rem;
+    margin-top: 4rem !important ;
 }
 .margin-top-h {
-    margin-top: 8rem;
+    margin-top: 8rem !important ;
 }
