--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,7 +11,9 @@ $Light-blue: #2998ff;
 $Dark-blue: #5643fa;
 
 $grey-light: #777;
-$grey-light-2 : 999 ;
+$grey-light-2 : #999 ;
+$grey-light-3 : #333 ;
+
 $light-dark : #f7f7f7; 
 
 $color-black : #0000 ;
