--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,7 +7,7 @@
 @import "base/typography" ;
 @import "base/base" ;
 @import "base/animations" ;
-@import "base/utilities"   ;
+@import "base/utilities" ;
 
 // components 
 @import "components/buttons" ;
@@ -22,6 +22,8 @@
 // layouts
 @import "layouts/header" ;
 @import "layouts/grid" ;
+@import "layouts/footer" ;
+
 
 // pages 
 @import "pages/home" ;
