--- a/css/app.css
+++ b/css/app.css
@@ -56,7 +56,8 @@ body {
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 body {
   box-sizing: border-box; }
@@ -462,6 +463,67 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 30;
+  background-color: rgba(0, 0, 0, 0.8);
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s; }
+  .popup:target {
+    visibility: visible;
+    opacity: 1; }
+  .popup:target .popup__content {
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.5);
+    width: 80vw;
+    background-color: #ffff;
+    border-radius: 2px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+    transition: all 0.8s; }
+  .popup__left {
+    width: 35%;
+    display: table-cell; }
+  .popup__right {
+    width: 65%;
+    padding: 3rem 5rem;
+    display: table-cell;
+    vertical-align: middle; }
+  .popup__img {
+    display: block;
+    width: 100%;
+    height: 50%; }
+  .popup__text {
+    margin-bottom: 3rem;
+    font-size: 1.4rem;
+    column-count: 2;
+    column-gap: 3rem;
+    column-rule: 1px solid #999;
+    text-align: justify;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto; }
+  .popup__close, .popup__close:link, .popup__close:visited {
+    position: fixed;
+    top: 1rem;
+    right: 3rem;
+    font-size: 4rem;
+    font-weight: 700;
+    color: #999;
+    text-decoration: none;
+    transition: color 0.3s; }
+  .popup__close:hover {
+    color: #55c57a; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.6)), url(../img/hero.jpg);
@@ -559,8 +621,8 @@ body {
     width: 5.5rem;
     height: 5.5rem;
     position: fixed;
-    top: 7rem;
-    right: 7rem;
+    top: 6.8rem;
+    right: 6.8rem;
     z-index: 10;
     background-image: radial-gradient(#7ed56f, #28b485);
     border-radius: 50%;
