--- a/css/app.css
+++ b/css/app.css
@@ -2,8 +2,7 @@ body {
   font-family: "lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: #ffff;
@@ -16,12 +15,20 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-in; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        font-size: 4rem;
+        letter-spacing: 1rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.7rem;
     animation: moveInRight 1s ease-in; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        font-size: 1.5rem;
+        letter-spacing: 0.5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -36,11 +43,20 @@ body {
   .heading-secondary:hover {
     transform: skewY(2deg);
     text-shadow: 2px 10px 1rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2rem; } }
 
 .heading-tertiary {
   font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 700; }
+  @media (max-width: 37.5em) {
+    .heading-tertiary {
+      font-size: 1.4rem; } }
 
 .paragraph {
   font-size: 1.6rem;
@@ -58,9 +74,22 @@ body {
 html {
   font-size: 62.5%;
   scroll-behavior: smooth; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 70%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 @keyframes moveInLeft {
   0% {
@@ -191,6 +220,19 @@ body {
   position: relative;
   perspective: 150rem;
   height: 50rem; }
+  @media (max-width: 75em) {
+    .card {
+      width: 50%;
+      margin: auto;
+      height: 60rem; } }
+  @media (max-width: 37.5em) {
+    .card {
+      width: 65%;
+      margin: auto; } }
+  @media (max-width: 25em) {
+    .card {
+      width: 80%;
+      margin: auto; } }
   .card__side {
     width: 90%;
     height: 50rem;
@@ -204,6 +246,10 @@ body {
     top: 0;
     left: 0;
     backface-visibility: hidden; }
+    @media (max-width: 75em) {
+      .card__side {
+        width: 100%;
+        height: 60rem; } }
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back--1 {
@@ -278,30 +324,63 @@ body {
     font-weight: 100; }
 
 .composition {
-  position: relative; }
+  position: relative;
+  height: 30rem; }
+  @media (max-width: 75em) {
+    .composition {
+      height: auto; }
+      .composition::after {
+        content: "";
+        display: table;
+        clear: both; } }
   .composition__photo {
+    position: absolute;
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     transition: all 0.3s;
     outline-offset: 2rem; }
     .composition__photo:nth-child(1) {
-      position: absolute;
       left: 0;
       top: -2rem; }
+      @media (max-width: 75em) {
+        .composition__photo:nth-child(1) {
+          top: 0;
+          left: 2rem; } }
     .composition__photo:nth-child(2) {
-      position: absolute;
       top: 0;
       right: 2rem; }
+      @media (max-width: 75em) {
+        .composition__photo:nth-child(2) {
+          top: -2rem;
+          right: 0;
+          z-index: 20; } }
     .composition__photo:nth-child(3) {
-      position: absolute;
       left: 20%;
       top: 10rem; }
+      @media (max-width: 75em) {
+        .composition__photo:nth-child(3) {
+          top: 0;
+          left: -2rem; } }
+    @media (max-width: 75em) {
+      .composition__photo {
+        position: relative;
+        float: left;
+        width: 33.33333%;
+        box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
+        margin-bottom: 5rem; } }
     .composition__photo:hover {
       transform: scale(1.1);
       outline: 1rem solid #7ed56f;
       z-index: 1; }
+      @media (max-width: 75em) {
+        .composition__photo:hover {
+          transform: none;
+          outline: none; } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
+    @media (max-width: 75em) {
+      .composition:hover .composition__photo:not(:hover) {
+        transform: none; } }
 
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
@@ -311,6 +390,14 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   transition: all 0.3s; }
+  @media (max-width: 75em) {
+    .feature-box {
+      width: 50rem;
+      margin: auto; } }
+  @media (max-width: 37.5em) {
+    .feature-box {
+      width: 40rem;
+      margin: auto; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: 5px;
@@ -531,6 +618,9 @@ body {
   background-position: top;
   clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
   position: relative; }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0%, 100% 85vh, 0% 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -554,6 +644,9 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+  @media (max-width: 75em) {
+    .row {
+      max-width: 75rem; } }
   .row::after {
     content: "";
     display: table;
@@ -562,6 +655,13 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 4rem; }
+      @media (max-width: 75em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media (max-width: 75em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 4rem) / 2); }
   .row .col-1-of-3 {
@@ -573,9 +673,15 @@ body {
   background-color: #333;
   padding: 5rem 0;
   font-size: 1.4rem; }
+  @media (max-width: 37.5em) {
+    .footer {
+      padding: 5rem 2rem; } }
   .footer__logo {
     width: 15rem;
     height: auto; }
+    @media (max-width: 37.5em) {
+      .footer__logo {
+        width: 10rem; } }
   .footer__list {
     padding-top: 2rem;
     border-top: 1px solid #999; }
@@ -584,6 +690,12 @@ body {
     list-style: none; }
     .footer__list-item:not(:last-child) {
       margin-right: 1.5rem; }
+    @media (max-width: 37.5em) {
+      .footer__list-item {
+        display: block;
+        margin: 1rem auto !important;
+        text-align: center;
+        font-size: 1.6rem; } }
   .footer__link:link, .footer__link:visited {
     display: inline-block;
     font-family: inherit;
@@ -617,17 +729,29 @@ body {
     border-radius: 50%;
     text-align: center;
     cursor: pointer; }
+    @media (max-width: 56.25em) {
+      .navigation__button {
+        width: 5rem;
+        height: 5rem;
+        top: 2.5rem;
+        right: 3.5rem; } }
   .navigation__background {
     width: 5.5rem;
     height: 5.5rem;
-    position: fixed;
     top: 6.8rem;
     right: 6.8rem;
+    position: fixed;
     z-index: 10;
     background-image: radial-gradient(#7ed56f, #28b485);
     border-radius: 50%;
     transform: scale(1);
     transition: all 0.3s; }
+    @media (max-width: 56.25em) {
+      .navigation__background {
+        width: 4.5rem;
+        height: 4.5rem;
+        top: 2.8rem;
+        right: 3.8rem; } }
   .navigation__nav {
     height: 100vh;
     position: fixed;
@@ -674,7 +798,11 @@ body {
     top: 2rem;
     width: 3rem;
     height: 2px;
-    background-color: #333; }
+    background-color: rgba(51, 51, 51, 0.6);
+    border-radius: 40px; }
+    @media (max-width: 56.25em) {
+      .navigation__icon {
+        top: 1.5rem; } }
     .navigation__icon:before, .navigation__icon:after {
       position: relative;
       content: "";
@@ -682,7 +810,9 @@ body {
       width: 3rem;
       height: 2px;
       background-color: #333;
-      transition: all 0.3s; }
+      transition: all 0.3s;
+      background-color: rgba(51, 51, 51, 0.6);
+      border-radius: 40px; }
     .navigation__icon:before {
       top: -1rem; }
     .navigation__icon:after {
@@ -702,8 +832,12 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 20rem;
+  padding: 20rem 5rem;
   margin-top: -20vh; }
+  @media (max-width: 37.5em) {
+    .section-about {
+      padding: 15rem 5rem;
+      margin-top: -10vh; } }
 
 .section-features {
   padding: 20rem 0;
@@ -713,19 +847,34 @@ body {
   margin-top: -10rem; }
   .section-features > * {
     transform: skewY(6deg); }
+  @media (max-width: 75em) {
+    .section-features {
+      padding: 15rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 10rem 0;
   margin-top: -10rem; }
+  @media (max-width: 37.5em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 37.5em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-booking {
   padding: 15rem 0;
   background-image: linear-gradient(to right, #7ed56f, #28b485); }
+  @media (max-width: 37.5em) {
+    .section-booking {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/nat-10.jpg");
