--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,7 +24,9 @@ $default-font-size : 1.6rem ;
 // grid 
 
 $grid-width : 114rem ; 
+$grid-width-tab : 75rem ;
 $grid-margin-bottom : 6rem ;
 
 $gutter-horizental : 4rem ;  
 $gutter-vertical : 8rem ;
+$gutter-vertical-tab : 6rem ;
