--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,26 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // so that 1rem = 10px
   scroll-behavior: smooth;
+
+  @include responsive(tab-land) {
+    font-size: 56.25%; // 1rem = 9px
+  }
+  @include responsive(tab-port) {
+    font-size: 50%; // 1rem = 8px 
+  }
+  
+  @include responsive(desktop-big) {
+    font-size: 70%; // 1rem = 12px
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include responsive(tab-port) {
+    padding: 0;
+  }
 }
