--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -18,6 +17,11 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-in;
+
+    @include responsive(phone){
+      font-size: 4rem ;
+      letter-spacing: 1rem;
+    }
   }
 
   &--sub {
@@ -26,6 +30,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.7rem;
     animation: moveInRight 1s ease-in;
+    @include responsive(phone){
+      font-size: 1.5rem ;
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -47,11 +55,22 @@ body {
     transform: skewY(2deg);
     text-shadow: 2px 10px 1rem rgba($color-black, $alpha: 0.2);
   }
+
+  @include responsive(tab-port){
+    font-size : 3rem ;
+  } ;
+  @include responsive(phone) {
+    font-size : 2rem ;
+  }
 }
 .heading-tertiary {
   font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 700;
+
+  @include responsive(phone) {
+    font-size : 1.4rem ;
+  }
 }
 .paragraph {
   font-size: 1.6rem ;
