--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,37 +1,69 @@
 .composition {
   position: relative;
+  height: 30rem;
+  
+  @include responsive(tab-land) {
+    @include clearfix ;
+    height: auto;
+  }
 
   &__photo {
+    position: absolute;
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.4);
     transition: all 0.3s;
     outline-offset: 2rem;
 
+    
     &:nth-child(1) {
-      position: absolute;
       left: 0;
       top: -2rem;
+      @include responsive(tab-land) {
+        top: 0;
+        left: 2rem;
+      }
     }
     &:nth-child(2) {
-      position: absolute;
       top: 0;
       right: 2rem;
+      @include responsive(tab-land) {
+        top: -2rem;
+        right: 0;
+        z-index: 20;
+      }
     }
     &:nth-child(3) {
-      position: absolute;
       left: 20%;
       top: 10rem ;
+      @include responsive(tab-land) {
+        top: 0;
+        left: -2rem;
+      }
     }
-
+    @include responsive(tab-land) {
+      position: relative;
+      float: left;
+      width: 33.33333%;
+      box-shadow: 0 1rem 3rem rgba(black , 0.3);
+      margin-bottom: 5rem;
+    }
+    
     &:hover {
       transform: scale(1.1);
       outline: 1rem solid $Light-green;
       z-index: 1;
+      @include responsive(tab-land) {
+        transform: none;
+        outline: none;
+      }
     }
   }
 
 
   &:hover &__photo:not(:hover) {
       transform: scale(0.9);
+      @include responsive(tab-land) {
+        transform: none;
+      }
   }
 }
