--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,6 +6,14 @@
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, $alpha: 0.2);
   transition: all 0.3s; 
+  @include responsive(tab-land){
+    width: 50rem;
+    margin: auto;
+  }
+  @include responsive(phone){
+    width: 40rem ;
+    margin: auto;
+  }
 
 
   &__icon {
