--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,12 @@
 .section-about {
   background-color: $light-dark;
-  padding: 20rem;
+  padding: 20rem 5rem;
   margin-top: -20vh;
+
+  @include responsive (phone){
+    padding : 15rem 5rem ;
+    margin-top: -10vh;
+  }
 }
 
 .section-features {
@@ -21,22 +26,40 @@
   & > * {
     transform: skewY(6deg);
   }
+  
+  @include responsive (tab-land){
+    padding : 15rem 0 ;
+  }
+  @include responsive (phone){
+    padding : 10rem 0 ;
+  }
 }
 
 .section-tours {
   background-color: $light-dark;
   padding: 25rem 0 10rem 0 ;
   margin-top: -10rem ;
+
+  @include responsive (phone){
+    padding : 20rem 0 10rem 0 ;
+  }
 }
 
 .section-stories {
   padding : 15rem 0 ;
-  position : relative
+  position : relative ;
+  @include responsive (phone){
+    padding : 10rem 0 ;
+  }
 }
 
 .section-booking{
    padding: 15rem 0;
    background-image: linear-gradient(to right , $Light-green ,$Dark-green);
+
+   @include responsive (phone){
+    padding : 10rem 0 ;
+  }
 } 
 
 .book {
